Add in installable

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,6 +41,12 @@
             "purpose": "maskable"
         },
         {
+            "src": "assets/icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
             "src": "assets/icons/icon-152x152.png",
             "sizes": "152x152",
             "type": "image/png",
