--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "otsu-pwa-port",
+  "name": "aac-pwa-be-lab",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
