--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dexie-react-hooks": "^1.1.7",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
+    "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@types/node": "^22.7.4",
+    "@types/pica": "^9.0.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
@@ -49,6 +51,7 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
+    "tailwindcss-safe-area": "^0.6.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
