--- a/package.json
+++ b/package.json
@@ -1,59 +1,62 @@
 {
-  "name": "aac-pwa-be-lab",
-  "private": true,
-  "version": "0.0.4",
-  "type": "module",
-  "scripts": {
-    "dev": "vite --host",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "check-licenses": "npx license-report --only=prod --output=json > ./scripts/licenses.json",
-    "build-readme": "tsx ./scripts/index.ts",
-    "prebuild": "yarn run check-licenses && yarn run build-readme"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "dexie": "^4.0.8",
-    "dexie-react-hooks": "^1.1.7",
-    "lucide-react": "^0.446.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "react-router-dom": "^6.26.2",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/node": "^22.7.4",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/wicg-file-system-access": "^2023.10.5",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "license-report": "^6.7.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
-    "tailwindcss-animate": "^1.0.7",
-    "tailwindcss-safe-area": "^0.6.0",
-    "tsx": "^4.19.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
-    "vite-plugin-pwa": "^0.20.5"
-  }
+    "name": "aac-pwa-be-lab",
+    "private": true,
+    "version": "0.0.5",
+    "type": "module",
+    "scripts": {
+        "dev": "vite --host",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview",
+        "check-licenses": "npx license-report --only=prod --output=json > ./scripts/licenses.json",
+        "build-readme": "tsx ./scripts/index.ts",
+        "prebuild": "yarn run check-licenses && yarn run build-readme"
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^3.9.0",
+        "@mdx-js/mdx": "^3.0.1",
+        "@radix-ui/react-dialog": "^1.1.2",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-select": "^2.1.2",
+        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-switch": "^1.1.1",
+        "@tailwindcss/typography": "^0.5.15",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "dexie": "^4.0.8",
+        "dexie-react-hooks": "^1.1.7",
+        "lucide-react": "^0.446.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-hook-form": "^7.53.0",
+        "react-router-dom": "^6.26.2",
+        "sonner": "^1.5.0",
+        "tailwind-merge": "^2.5.2",
+        "tailwindcss-font-inter": "^3.1.0",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.9.0",
+        "@types/node": "^22.7.4",
+        "@types/react": "^18.3.3",
+        "@types/react-dom": "^18.3.0",
+        "@types/wicg-file-system-access": "^2023.10.5",
+        "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.9.0",
+        "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+        "eslint-plugin-react-refresh": "^0.4.9",
+        "globals": "^15.9.0",
+        "license-report": "^6.7.0",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.13",
+        "tailwindcss-animate": "^1.0.7",
+        "tailwindcss-safe-area": "^0.6.0",
+        "tsx": "^4.19.1",
+        "typescript": "^5.5.3",
+        "typescript-eslint": "^8.0.1",
+        "vite": "^5.4.1",
+        "vite-plugin-pwa": "^0.20.5"
+    }
 }
