--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.0",
+        "react-media-recorder": "^1.7.1",
         "react-router-dom": "^6.26.2",
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.5.2",
